@@ -117,7 +117,11 @@ protected:
 		Relocate,
 		Help,
 		ShowChanged,
+		IgnoreSub,
 		Ignore,
+		IgnoreFile,
+		IgnoreCaseSensitive,
+		IgnoreCaseInsensitive,
 		RepoBrowse,
 		Blame,
 		ApplyPatch,
