@@ -252,7 +252,7 @@ BEGIN
     IDS_MENUSHOWCHANGED     "Check for Updates"
     IDS_MENUDESCSHOWCHANGED "Shows all files which were changed since the last update, locally and in the repository"
     IDS_MENUIGNORE          "Add To Ignore List"
-    IDS_MENUDESCIGNORE      "Adds the selected file(s) to the 'ignore' list"
+    IDS_MENUDESCIGNORE      "Adds the selected file(s) or the filemask to the 'ignore' list"
     IDS_STATUSINCOMPLETE    "incomplete"
     IDS_STATUSIGNORED       "ignored"
     IDS_DROPCOPYMENU        "Copy files in Subversion to here"
